[gd_scene load_steps=8 format=3 uid="uid://bll87oea4cwa0"]

[ext_resource type="Script" path="res://scripts/signup.gd" id="1_11gr5"]
[ext_resource type="FontFile" uid="uid://d0scthstgfocq" path="res://assets/fonts/Kenney Mini Square.ttf" id="1_xpa2a"]
[ext_resource type="PackedScene" uid="uid://di70yg2cmkpfk" path="res://scenes/bg.tscn" id="2_gjli3"]
[ext_resource type="Texture2D" uid="uid://clb6tg0aopk4x" path="res://assets/textures/bg/Pink.png" id="3_3x3fw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrywk"]
bg_color = Color(1, 1, 1, 0.392157)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_ewkpq"]
font = ExtResource("1_xpa2a")
font_size = 48
font_color = Color(0.478431, 0.560784, 0.976471, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.686275)
shadow_offset = Vector2(1, 5)

[sub_resource type="LabelSettings" id="LabelSettings_mf85s"]
line_spacing = 1.0
font = ExtResource("1_xpa2a")
font_size = 14
font_color = Color(1, 0, 0, 1)

[node name="Signup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11gr5")

[node name="BG" parent="." instance=ExtResource("2_gjli3")]
bg_texture = ExtResource("3_3x3fw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 16.0
offset_right = -43.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xrywk")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -241.0
offset_top = 14.0
offset_right = 241.0
offset_bottom = 77.0
grow_horizontal = 2
text = "SIGN UP"
label_settings = SubResource("LabelSettings_ewkpq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdits" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 83.0
offset_right = 392.0
offset_bottom = 167.0
theme_override_constants/separation = 6
alignment = 1

[node name="Email" type="LineEdit" parent="LineEdits"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/caret_width = 2
theme_override_fonts/font = ExtResource("1_xpa2a")
theme_override_font_sizes/font_size = 12
placeholder_text = "Enter your email..."
clear_button_enabled = true
caret_blink = true

[node name="Password" type="LineEdit" parent="LineEdits"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/caret_width = 2
theme_override_fonts/font = ExtResource("1_xpa2a")
theme_override_font_sizes/font_size = 12
placeholder_text = "Enter your password..."
secret = true
clear_button_enabled = true
caret_blink = true

[node name="ConfirmPassword" type="LineEdit" parent="LineEdits"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/caret_width = 2
theme_override_fonts/font = ExtResource("1_xpa2a")
theme_override_font_sizes/font_size = 12
placeholder_text = "Confirm your password..."
secret = true
clear_button_enabled = true
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 43.0
offset_right = 210.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Back" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xpa2a")
theme_override_font_sizes/font_size = 14
text = "BACK"

[node name="Register" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xpa2a")
theme_override_font_sizes/font_size = 14
text = "REGISTER"

[node name="ErrorMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -66.0
offset_right = 184.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(445, 16)
label_settings = SubResource("LabelSettings_mf85s")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
